# fif-Screen

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  FifScreen Control.cmd  README.md  settings.gradle.kts
android-client/: build.gradle.kts  gradlew  gradlew.bat
android-client/src/main/: AndroidManifest.xml
android-client/src/main/java/com/fif/screen/: MainActivity.kt
android-client/src/main/java/com/fif/screen/diagnostics/: FifLog.kt  H264CapabilityLogger.kt
android-client/src/main/java/com/fif/screen/input/: TouchInputMapper.kt
android-client/src/main/java/com/fif/screen/net/: ConnectionEndpoint.kt  LanDiscovery.kt  PairingCrypto.kt  StreamClient.kt
android-client/src/main/java/com/fif/screen/protocol/: FifProtocol.kt
android-client/src/main/java/com/fif/screen/video/: DirtyRawSurfaceRenderer.kt  H264SurfaceDecoder.kt  RawSurfaceRenderer.kt
android-client/src/main/res/values/: styles.xml
android-client/src/test/java/com/fif/screen/input/: TouchInputMapperTest.kt
android-client/src/test/java/com/fif/screen/net/: LanConnectionTest.kt  PairingCryptoTest.kt
android-client/src/test/java/com/fif/screen/protocol/: FifProtocolTest.kt
docs/: android-build.md  android-hardware-test.md  android-usb-reconnect-test.md  architecture.md  capture-benchmark.md  cross-pc-handoff-2026-07-13.md  dev-machine.md  device-launcher-build.md  display-recovery.md  driver-build.md  driver-gate-checkpoint.md  driver-install-gate.md  driver-machine-preflight.md  driver-package-stage.md  driver-signature-audit.md  driver-signing.md  driver-test-mode-gate.md  driver-test-paths.md  driver-toolchain.md  environment-audit.md  fif-idd-device-identity.md  git-baseline.md  hardware-id-match-audit.md  idd-device-lifecycle.md  iddsample-build.md  latency.md  post-reboot-read-only-check.md  progress.md  research.md  software-device-create-runtime.md  software-device-create.md  software-device-launcher-audit-v2.md  software-device-launcher-audit.md  test-device.md  usb-video-mvp-checkpoint.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.5.2.md  v0.5.3.md  v0.5.4.md  v0.5.5.md
gradle/wrapper/: gradle-wrapper.properties
packaging/: FifScreen.iss  README.md  update-manifest.example.json
packaging/scripts/: check-update.ps1  install-driver.ps1  stop-runtime.ps1  uninstall-cleanup.ps1
packaging/windows/: fif-host.manifest  fifscreen-version.h  version.rc.in
protocol/: CMakeLists.txt  spec.md
protocol/include/fif/: bounded_queue.hpp  protocol.hpp
protocol/test-vectors/: test-vectors.json
scripts/: android-device-check.ps1  android-install-debug.ps1  android-run.ps1  build-installer.ps1  check-env.ps1  driver-install-test.ps1  driver-state-check.ps1  driver-uninstall-test.ps1  fifscreen-control.ps1  publish-release.ps1
tests/: CMakeLists.txt  control_script_test.ps1  cursor_position_test.cpp  cursor_software_test.cpp  pairing_crypto_test.cpp  protocol_frame_test.cpp  touch_injector_test.cpp  win32_socket_test.cpp
updates/: latest-development.json
windows-driver/: README.md  install-dev.ps1  uninstall-dev.ps1
windows-driver/FifIddDeviceLauncher/: CMakeLists.txt
windows-driver/FifIddDeviceLauncher/src/: main.cpp
windows-driver/FifIddDriver/: Driver.cpp  FifIddDriver.inf  FifIddDriver.rc  FifIddDriver.sln  FifIddDriver.vcxproj  FifIddDriver.vcxproj.filters
windows-host/: CMakeLists.txt
windows-host/src/: adb.cpp  adb.hpp  cursor_position.hpp  cursor_software.hpp  encoder.hpp  host_server.cpp  host_server.hpp  main.cpp  mf_h264_encoder.cpp  mf_h264_encoder.hpp  pairing_crypto.cpp  pairing_crypto.hpp  screen_capture.cpp  screen_capture.hpp  touch_injector.cpp  touch_injector.hpp  win32_socket.cpp  win32_socket.hpp
